crates/flui-types/tests/compile_fail/mixed_point_offset.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/mixed_point_offset.rs:12:27
   |
12 |     let _result = point + offset;
   |                           ^^^^^^ expected `Vec2<Pixels>`, found `Offset<DevicePixels>`
   |
   = note: expected struct `Vec2<flui_types::Pixels>`
              found struct `Offset<DevicePixels>`
